--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-cors-headers==3.8.0
 djangorestframework==3.12.4
 idna==3.2
 oauthlib==3.1.1
+Pillow==8.3.2
 pycparser==2.20
 PyJWT==2.1.0
 python3-openid==3.2.0
